weird mobile spacing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ header {
 
 @media screen and (max-width: 750px) {
   #logo {
-    margin-top: 120px;
+    /*margin-top: 120px;*/
   }
 }
 
@@ -363,7 +363,7 @@ footer p {
 	  background: none;
   }
   #headerContent {
-    padding-top: 0%;
+    padding-top: 10px;
   }
   .title {
 	color: #FFFFFF;
